%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PlayerAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Direction
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Jump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpDown
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsOnGround
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: FallVelocity
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Childs:
  - m_Motion: {fileID: 7400002, guid: 871ac50f9973c0146a34455035a67abc, type: 3}
    m_Threshold: .714285731
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400006, guid: 871ac50f9973c0146a34455035a67abc, type: 3}
    m_Threshold: .857142866
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 871ac50f9973c0146a34455035a67abc, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: c75d051490b463240947ef0dd0ed6f8e, type: 3}
    m_Threshold: 1.14285707
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: .5
    m_IsAnim: 1
    m_Mirror: 1
  - m_Motion: {fileID: 7400000, guid: 871ac50f9973c0146a34455035a67abc, type: 3}
    m_Threshold: 1.28571415
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: c51e4206b8a64644696a20313e253ea8, type: 3}
    m_Threshold: 1.42857122
    m_Position: {x: 0, y: .600000024}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: c51e4206b8a64644696a20313e253ea8, type: 3}
    m_Threshold: 1.5714283
    m_Position: {x: .600000024, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400006, guid: c51e4206b8a64644696a20313e253ea8, type: 3}
    m_Threshold: 1.71428537
    m_Position: {x: -.600000024, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: c51e4206b8a64644696a20313e253ea8, type: 3}
    m_Threshold: 1.85714245
    m_Position: {x: 0, y: -.600000024}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: Direction
  m_BlendParameterY: Speed
  m_MinThreshold: .714285731
  m_MaxThreshold: 1.99999952
  m_UseAutomaticThresholds: 0
  m_BlendType: 2
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0481455065
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107548
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110243437}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107646
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110243437}
  m_DstState: {fileID: 110264083}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107991
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236068}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .111940295
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .889999986
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110109396
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110283485}
  m_DstState: {fileID: 110264083}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110111490
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110260855}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .111940295
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: JumpDown
    m_EventTreshold: 0
    m_ExitTime: .889999986
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110112532
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264083}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110113432
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110114819
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110116443
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110200789}
  m_TransitionDuration: .0481455065
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .951854467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110125677
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110264083}
  m_TransitionDuration: .102272719
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .897727251
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: 0
    m_ExitTime: .897727251
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .897727251
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .897727251
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127833
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110260855}
  m_TransitionDuration: .0481455065
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110140610
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236068}
  m_DstState: {fileID: 110283485}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110142112
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200789}
  m_DstState: {fileID: 110243437}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144910
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236068}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145686
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236068}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110151389
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200789}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110164181
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200789}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .111940295
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .888059735
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169493
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110243437}
  m_TransitionDuration: .102272719
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .897727251
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .897727251
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110171786
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110283485}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsOnGround
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110173640
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110236068}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110174241
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110283485}
  m_TransitionDuration: .102272719
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .897727251
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .897727251
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177785
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264083}
  m_DstState: {fileID: 110283485}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110182797
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264083}
  m_DstState: {fileID: 110243437}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190038
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228756}
  m_DstState: {fileID: 110236068}
  m_TransitionDuration: .0481455065
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .951854467
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .951854467
  - m_ConditionMode: 4
    m_ConditionEvent: Direction
    m_EventTreshold: -.100000001
    m_ExitTime: .951854467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190114
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200789}
  m_DstState: {fileID: 110228756}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110194584
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110264083}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: FallVelocity
    m_EventTreshold: 0
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110198430
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110200789}
  m_TransitionDuration: .11363636
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Direction
    m_EventTreshold: .100000001
    m_ExitTime: .886363626
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Jump
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 842f74d3b6e01054986e7b0313ef3a40, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: -264, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110200789
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: JumpRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 842f74d3b6e01054986e7b0313ef3a40, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 792, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110228756
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 360, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110236068
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: JumpLeft
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 842f74d3b6e01054986e7b0313ef3a40, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110243437
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FallRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: f59d3f0b6f134e04b9c4870c35dc84e1, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 744, y: -240, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110260855
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: JumpBack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 842f74d3b6e01054986e7b0313ef3a40, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 360, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110264083
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FallStraight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f59d3f0b6f134e04b9c4870c35dc84e1, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 480, y: -408, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110283485
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FallLeft
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: f59d3f0b6f134e04b9c4870c35dc84e1, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -24, y: -228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110228756}
  m_States:
  - {fileID: 110228756}
  - {fileID: 110200000}
  - {fileID: 110260855}
  - {fileID: 110236068}
  - {fileID: 110200789}
  - {fileID: 110264083}
  - {fileID: 110243437}
  - {fileID: 110283485}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110228756}
      second:
      - {fileID: 110100000}
      - {fileID: 110127833}
      - {fileID: 110190038}
      - {fileID: 110116443}
      - {fileID: 110174241}
      - {fileID: 110169493}
      - {fileID: 110125677}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110113432}
      - {fileID: 110114819}
      - {fileID: 110173640}
      - {fileID: 110198430}
      - {fileID: 110194584}
    data:
      first: {fileID: 110260855}
      second:
      - {fileID: 110111490}
    data:
      first: {fileID: 110236068}
      second:
      - {fileID: 110107991}
      - {fileID: 110145686}
      - {fileID: 110140610}
      - {fileID: 110144910}
    data:
      first: {fileID: 110200789}
      second:
      - {fileID: 110164181}
      - {fileID: 110190114}
      - {fileID: 110142112}
      - {fileID: 110151389}
    data:
      first: {fileID: 110264083}
      second:
      - {fileID: 110112532}
      - {fileID: 110177785}
      - {fileID: 110182797}
    data:
      first: {fileID: 110243437}
      second:
      - {fileID: 110107548}
      - {fileID: 110107646}
    data:
      first: {fileID: 110283485}
      second:
      - {fileID: 110171786}
      - {fileID: 110109396}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 864, y: -384, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
